--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,10 @@
     "strict": true,
     "module": "es2015",
     "moduleResolution": "node",
-
+    "noImplicitAny": false,
     "target": "es5",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "interface-name": [true, "never-prefix"]
   },
   "include": ["./src/**/*"]
 }
