--- a/package.json
+++ b/package.json
@@ -4,31 +4,18 @@
   "main": "src/client/index.ts",
   "license": "MIT",
   "scripts": {
-    "build-d": "webpack --config build/webpack.config.dev.js",
-    "build-s": "tsc -p src/server/server.ts",
-    "type" : "vuetype src/components",
+    "build-d": "webpack -p --config build/webpack.config.prod.js",
+    "build-s": "tsc -p src/server/server.ts --outDir ./dist/server",
+    "build": "yarn run build-d && yarn run build-s",
+    "type": "vuetype src/components",
     "dev": "webpack-dev-server --hot --inline --config build/webpack.config.dev.js",
     "lint": "tslint -c tslint.json src/**/*.ts",
-    "precommit": "lint-staged --debug ",
-    "pret": "prettier"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "prettier --write",
-      "git add"
-    ]
+    "test": "tsc && ava"
   },
   "devDependencies": {
-    "@types/node": "^9.4.0",
-    "lint-staged": "^6.1.0",
-    "prettier": "1.10.2",
-    "typescript": "^2.7.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
-  },
-  "dependencies": {
     "@types/koa": "^2.0.43",
     "@types/koa-static": "^4.0.0",
+    "@types/node": "^9.4.0",
     "@types/sanitize-html": "^1.14.0",
     "@types/socket.io": "^1.4.31",
     "@types/socket.io-client": "^1.4.32",
@@ -36,22 +23,36 @@
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
-    "koa": "^2.4.1",
-    "koa-static": "^4.0.2",
-    "sanitize-html": "^1.17.0",
-    "socket.io": "^2.0.4",
-    "socket.io-client": "^2.0.4",
     "style-loader": "^0.20.1",
     "ts-loader": "^3.4.0",
     "tslint": "^5.9.1",
-    "tslint-config-prettier": "^1.7.0",
+    "typescript": "^2.7.1",
+    "uglifyjs-webpack-plugin": "^1.1.8",
+    "vuetype": "^0.2.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1",
+    "webpack-merge": "^4.1.1"
+  },
+  "dependencies": {
+    "@types/chai": "^4.1.2",
+    "@types/chai-http": "^3.0.3",
+    "@types/mocha": "^2.2.48",
+    "ava": "^0.25.0",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "koa": "^2.4.1",
+    "koa-static": "^4.0.2",
+    "mocha": "^5.0.0",
+    "sanitize-html": "^1.17.0",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
+    "ts-node": "^4.1.0",
     "vue": "^2.5.13",
     "vue-class-component": "^6.1.2",
     "vue-loader": "^14.1.1",
     "vue-socket-io": "^0.3.2",
     "vue-socket.io": "^2.1.1-b",
     "vue-template-compiler": "^2.5.13",
-    "vuetify": "^0.17.7",
-    "vuetype": "^0.2.2"
+    "vuetify": "^0.17.7"
   }
 }
