--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "license": "MIT",
   "scripts": {
     "build-d": "webpack -p --config build/webpack.config.prod.js",
-    "build-s": "tsc -p src/server/server.ts --outDir ./dist/server",
+    "build-s": "tsc src/server/server.ts --outDir ./dist/",
     "build": "yarn run build-d && yarn run build-s",
     "type": "vuetype src/components",
-    "dev": "webpack-dev-server --hot --inline --config build/webpack.config.dev.js",
-    "lint": "tslint -c tslint.json src/**/*.ts",
-    "test": "tsc && ava"
+    "dev":
+      "webpack-dev-server --hot --inline --config build/webpack.config.dev.js",
+    "lint": "tslint -c tslint.json src/**/*.ts"
+  },
+  "nyc": {
+    "reporter": ["html", "lcov", "text", "text-summary"],
+    "report-dir": "dist/reports/coverage"
   },
   "devDependencies": {
     "@types/koa": "^2.0.43",
@@ -34,24 +38,14 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
-    "@types/chai": "^4.1.2",
-    "@types/chai-http": "^3.0.3",
-    "@types/mocha": "^2.2.48",
-    "ava": "^0.25.0",
-    "chai": "^4.1.2",
-    "chai-http": "^3.0.0",
     "koa": "^2.4.1",
     "koa-static": "^4.0.2",
-    "mocha": "^5.0.0",
     "sanitize-html": "^1.17.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
-    "ts-node": "^4.1.0",
     "vue": "^2.5.13",
     "vue-class-component": "^6.1.2",
     "vue-loader": "^14.1.1",
-    "vue-socket-io": "^0.3.2",
-    "vue-socket.io": "^2.1.1-b",
     "vue-template-compiler": "^2.5.13",
     "vuetify": "^0.17.7"
   }
