--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,23 +3,14 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "strict": true,
-    "module": "es2015",
+    "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": false,
     "target": "es5",
+    "lib": ["es2015", "dom"],
     "experimentalDecorators": true
   },
-  "types": [
-    "mocha"
- ],
- "typeRoots": [
-   "./node_modules/@types"
- ],
-  "include": [
-    "src/**/*"
-],
-"exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-]
+  "typeRoots": ["./node_modules/@types"],
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
