--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "noImplicitAny": false,
     "target": "es5",
     "lib": ["es2015", "dom"],
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "strictFunctionTypes": false
   },
   "typeRoots": ["./node_modules/@types"],
   "include": ["src/**/*"],
